RESOLVED FIXED 93140
BindingSecurity::shouldAllowAccessToNode shouldn't detour through Frame to find the node's document
https://bugs.webkit.org/show_bug.cgi?id=93140
Summary BindingSecurity::shouldAllowAccessToNode shouldn't detour through Frame to fi...
Adam Barth
Reported 2012-08-03 10:42:50 PDT
BindingSecurity::shouldAllowAccessToNode shouldn't detour through Frame to find the node's document
Attachments
Patch (3.27 KB, patch)
2012-08-03 10:48 PDT, Adam Barth
no flags
Adam Barth
Comment 1 2012-08-03 10:48:43 PDT
Eric Seidel (no email)
Comment 2 2012-08-03 13:29:29 PDT
Comment on attachment 156415 [details] Patch OK.
WebKit Review Bot
Comment 3 2012-08-04 01:13:29 PDT
Comment on attachment 156415 [details] Patch Clearing flags on attachment: 156415 Committed r124695: <http://trac.webkit.org/changeset/124695>
WebKit Review Bot
Comment 4 2012-08-04 01:13:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.