BindingSecurity::shouldAllowAccessToNode shouldn't detour through Frame to find the node's document https://bugs.webkit.org/show_bug.cgi?id=93140

Reviewed by Eric Seidel.

Previously, shouldAllowAccessToNode took a detour through the Frame to
find the Document associated with a given Node. That's crazy! Nodes
already know their documents. This patch removes the detour.

It's theoretically possible that this patch changes behavior in the
case where the Frame is 0, but I couldn't find any situations in which
we call this function on nodes in inactive documents because the
typical way you find a node worth checking security on is via
a JavaScript window object.

* bindings/generic/BindingSecurity.cpp:
(WebCore::canAccessDocument):
(WebCore::BindingSecurity::shouldAllowAccessToNode):
(WebCore::BindingSecurity::allowSettingFrameSrcToJavascriptUrl):


Canonical link: https://commits.webkit.org/111034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124695 268f45cc-cd09-0410-ab3c-d52691b4dbfc